--- a/sandbox/src/components/tabs-text/tabs-text.scss
+++ b/sandbox/src/components/tabs-text/tabs-text.scss
@@ -31,7 +31,7 @@
 
   .js-tabs & {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
   }
 
   -webkit-overflow-scrolling: touch;
@@ -79,7 +79,7 @@
   transition: all .1s linear;
 }
 
-.c-tabs__tablist--dotnav {
+.js-tabs .c-tabs__tablist--dotnav {
   justify-content: center;
 }
 
